--- a/helm/pipeline/templates/pipeline.yaml
+++ b/helm/pipeline/templates/pipeline.yaml
@@ -55,7 +55,7 @@ spec:
       - name: IMAGE
         value: $(params.output-image)
     runAfter:
-    - run-test
+    - install-dependencies
     taskRef:
       kind: ClusterTask
       name: buildah
